# gymir5g

./: .cproject  .gitignore  .oppbuildspec  .project  Makefile  README.md
configurations/: env.json  streams.json
configurations/baseDrl/: streams_sim_webrtc.json  streams_sim_webrtc_20fps.json  streams_sim_webrtc_same.json  streams_sim_webrtc_same_v.json
configurations/evalCallback/: default.json
configurations/experiments/: eval.ipynb  test.py
configurations/mdps/: ahoy.json  combine_v1.json  combine_v1_cont.json  combine_v2_cont.json  combine_v3_cont.json  ppo_hyperparam.json  qoe_acm.json  qoe_acm_v2.json
docker/: README.md
docker/docker/: Dockerfile-cpu  build-cpu  run-cpu
drl/: README.md  pyproject.toml
drl/gymirdrl/: run
drl/gymirdrl/core/: callbacks.py  observation.py  reward.py
drl/gymirdrl/templates/: ppo.json  ppo_lstm.json  qrdqn.json  sac.json
simulations/: package.ned
simulations/anleger/: Anleger_SA.ini  Anleger_SA.ned  Anleger_SA_Base.ned  Anleger_SA_WIFI.ini  Anleger_SA_WIFI.ned  demo.xml  run  waypoints_dit_geo.json  waypoints_dit_omnetpp.json  waypoints_rev_geo.json  waypoints_rev_omnetpp.json
simulations/baseDrlBg/: DrlBaseNetworkBg.ned  omnetpp.ini  run
src/: Makefile  Makefile_docker  makefrag  package.ned
src/domain/: CSVLogger.h  Statistics.h  TSQueue.h  TaskPerformer.h
src/service/: GymCommunicator.cc  GymCommunicator.h  SignalListener.cc  SignalListener.h
utils/omnetpp/: bsConfigurator.py  coordsTransformer.py
utils/sumo/: ConvertOsmToInetObstacles.sh  changeTargetRoute.py  generateTraffic.py  reducePoly.py  (+1 more)
(+135 files in other folders)
